--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "lionel/framework",
+  "name": "lionelpro/framework",
   "description": "The Wordpress Starter Framework.",
   "keywords": ["wordpress", "stater", "laravel"],
   "license": "MIT",
